Removed visual studio code files from repository

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,8 @@
 *.svd
 
 # Special VS Code file for Mac developing
-/AAAAYesss/[Pp]lugins/VSCode.cs
-/AAAAYesss/[Pp]lugins/VSCode.cs.meta
+/AAAAYesss/Assets/[Pp]lugins/VSCode.cs
+/AAAAYesss/Assets/[Pp]lugins/VSCode.cs.meta
 
 
 # Unity3D generated meta files
